# suspicious-process-detector

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
src/rules/: __init__.py
src/suspicious_process_detector/: __init__.py  models.py  process_collector.py  reporter.py  risk_analyzer.py  scanner.py
src/suspicious_process_detector/rules/: command_rules.py  directory_rules.py  name_rules.py  parent_rules.py
tests/: __init__.py  test_command_rules.py  test_directory_rules.py  test_name_rules.py  test_parent_rules.py  test_risk_analyzer.py
tools/: suspicious_process_simulator.py
