[project]
name = "suspicious-process-detector"
version = "0.1.0"
description = "A defensive Python CLI tool that detects suspicious running processes and generates JSON security reports."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Igor Souza" }
]
keywords = [
    "python",
    "cybersecurity",
    "blue-team",
    "process-monitoring",
    "security-tools"
]
dependencies = [
    "psutil==5.9.8"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []